objects/UspsAddress__c.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarrierRoute__c</fullName>
        <label>Carrier Route</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryPoint__c</fullName>
        <label>Delivery Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmName__c</fullName>
        <label>Firm Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip4__c</fullName>
        <label>Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip5__c</fullName>
        <label>Zip 5</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>USPS Address</label>
    <nameField>
        <displayFormat>UA-{00000000}</displayFormat>
        <label>USPS Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USPS Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>